# OpenBachelorInsight

./: .gitattributes  .gitignore  auto.cmd  build_js.cmd  inject.cmd  package-lock.json  package.json  pyproject.toml  reader.cmd  start.cmd  tsconfig.json
csv/: multiOperationMatch_act3enemyduel_01b.csv  multiOperationMatch_act3enemyduel_01b_aug.csv
data/: multiOperationMatch_act3enemyduel_01a_1.jsonl  multiOperationMatch_act3enemyduel_01b_1.jsonl  multiOperationMatch_act3enemyduel_01b_10.jsonl  multiOperationMatch_act3enemyduel_01b_11.jsonl  multiOperationMatch_act3enemyduel_01b_12.jsonl  multiOperationMatch_act3enemyduel_01b_13.jsonl  multiOperationMatch_act3enemyduel_01b_14.jsonl  multiOperationMatch_act3enemyduel_01b_2.jsonl  multiOperationMatch_act3enemyduel_01b_3.jsonl  multiOperationMatch_act3enemyduel_01b_4.jsonl  multiOperationMatch_act3enemyduel_01b_5.jsonl  multiOperationMatch_act3enemyduel_01b_6.jsonl  multiOperationMatch_act3enemyduel_01b_7.jsonl  multiOperationMatch_act3enemyduel_01b_8.jsonl  multiOperationMatch_act3enemyduel_01b_9.jsonl
rel/: main.js  reader.js
src/inject/: main.ts  reader.ts
src/openbachelori/: auto.py  inject.py  main.py  reader.py  to_csv.py
src/openbachelori/models/baseline_lgb/: model.txt  pred.py  train.py
