[project]
name = "openbachelorinsight"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "jsonlines (>=4.0.0,<5.0.0)",
    "frida (==17.9.1)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "pygetwindow (>=0.0.9,<0.0.10)",
    "pillow (>=12.2.0,<13.0.0)",
    "elevate (>=0.1.3,<0.2.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "openbachelori", from = "src" }]

[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "poethepoet (>=0.45.0,<0.46.0)",
]
